tests/pass/run/array_local_parity/main.kira
@Main
function main() {
    let values = [1, 2, 3]
    for item in values {
        print(item)
    }
    return
}
